Commit on branch kumar

--- a/Tracking/bhai_kitna/app/src/main/AndroidManifest.xml
+++ b/Tracking/bhai_kitna/app/src/main/AndroidManifest.xml
@@ -40,5 +40,7 @@
             </intent-filter>
         </activity>
     </application>
-
+<!--
+    just a change for se project. You gotta do what you gotta do.
+    -->
 </manifest>
